feat: add LDAP client config to all VMs/CTs and update FreeIPA server hostname

--- a/ansible/roles/ldap-config/defaults/main.yml
+++ b/ansible/roles/ldap-config/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 # LDAP Client default variables
-freeipa_server_hostname: "freeipa.tail09bdcf.ts.net"
+freeipa_server_hostname: "freeipa-dev-7ee9.tail09bdcf.ts.net"
 freeipa_domain: "tail09bdcf.ts.net"
 freeipa_realm: "TAIL09BDCF.TS.NET"
