--- a/ansible/roles/ldap-config/tasks/main.yml
+++ b/ansible/roles/ldap-config/tasks/main.yml
@@ -4,7 +4,7 @@
 
 - name: Set FreeIPA client facts
   set_fact:
-    freeipa_server: "{{ freeipa_server_hostname | default('freeipa.tail09bdcf.ts.net') }}"
+    freeipa_server: "{{ freeipa_server_hostname | default('freeipa-dev-7ee9.tail09bdcf.ts.net') }}"
     freeipa_domain: "tail09bdcf.ts.net"
     freeipa_realm: "TAIL09BDCF.TS.NET"
 
