--- a/ansible/roles/ldap-config/tasks/main.yml
+++ b/ansible/roles/ldap-config/tasks/main.yml
@@ -7,6 +7,17 @@
     freeipa_server: "{{ freeipa_server_hostname | default('freeipa-dev-7ee9.tail09bdcf.ts.net') }}"
     freeipa_domain: "tail09bdcf.ts.net"
     freeipa_realm: "TAIL09BDCF.TS.NET"
+    # Construct full hostname - target_hostname is passed from workflow
+    freeipa_client_hostname: "{{ target_hostname | default(ansible_hostname) }}.{{ freeipa_domain }}"
+
+- name: Debug FreeIPA enrollment variables
+  debug:
+    msg:
+      - "FreeIPA Server: {{ freeipa_server }}"
+      - "FreeIPA Domain: {{ freeipa_domain }}"
+      - "Target Hostname: {{ target_hostname | default('NOT SET') }}"
+      - "Client Hostname: {{ freeipa_client_hostname }}"
+      - "Admin Password Set: {{ 'yes' if freeipa_admin_password is defined else 'no' }}"
 
 - name: Update /etc/hosts with FreeIPA server
   lineinfile:
@@ -51,14 +62,15 @@
     --realm={{ freeipa_realm }}
     --principal=admin
     --password={{ freeipa_admin_password }}
-    --hostname={{ target_hostname }}.{{ freeipa_domain }}
+    --hostname={{ freeipa_client_hostname }}
     --mkhomedir
     --no-ntp
     --unattended
   when: 
     - not ipa_enrolled.stat.exists
     - freeipa_admin_password is defined
-    - target_hostname is defined
+    - freeipa_client_hostname is defined
+    - freeipa_client_hostname != '.tail09bdcf.ts.net'
   register: ipa_client_install
 
 - name: Display enrollment result
