--- a/.github/workflows/reusable-destroy.yml
+++ b/.github/workflows/reusable-destroy.yml
@@ -30,8 +30,24 @@ on:
         default: '20G'
       vm_target_ip:
         type: string
-        description: 'IP of the VM to destroy (must match VLAN subnet)'
-        required: true
+        description: 'IP of the VM to destroy (must match VLAN subnet) - for single instance mode'
+        required: false
+        default: ''
+      instances:
+        type: string
+        description: 'JSON map of instances for multi-instance deployments (e.g., {"node1":{"ip_address":"192.168.10.51"}}). Leave empty for single instance mode.'
+        required: false
+        default: ''
+      environment:
+        type: string
+        description: 'Environment name (dev, staging, prod)'
+        required: false
+        default: 'dev'
+      resource_type:
+        type: string
+        description: 'Resource type: vm or lxc'
+        required: false
+        default: 'vm'
     secrets:
       DOPPLER_TOKEN:
         required: true
@@ -82,6 +98,17 @@ jobs:
           export AWS_ACCESS_KEY_ID="$MINIO_ROOT_USER"
           export AWS_SECRET_ACCESS_KEY="$MINIO_ROOT_PASSWORD"
           
+          # Set Proxmox credentials
+          export TF_VAR_proxmox_api_url="$PROXMOX_API_URL"
+          export TF_VAR_proxmox_api_token_id="$PROXMOX_TOKEN_ID"
+          export TF_VAR_proxmox_api_token_secret="$PROXMOX_TOKEN_SECRET"
+          export TF_VAR_ssh_public_key="$ANS_SSH_PUBLIC_KEY"
+          
+          # Set Tailscale credentials for Terraform provider
+          export TAILSCALE_OAUTH_CLIENT_ID="$TAILSCALE_OAUTH_CLIENT_ID"
+          export TAILSCALE_OAUTH_CLIENT_SECRET="$TAILSCALE_OAUTH_CLIENT_SECRET"
+          export TAILSCALE_TAILNET="${TAILSCALE_TAILNET:--}"
+          
           # Terraform Init
           terraform init \
             -backend-config="bucket=terraform-state" \
@@ -107,21 +134,52 @@ jobs:
           # Set Proxmox credentials
           export TF_VAR_proxmox_api_url="$PROXMOX_API_URL"
           export TF_VAR_proxmox_api_token_id="$PROXMOX_TOKEN_ID"
-          export TF_VAR_proxmox_api_token_secret="$PROXMOX_TOKEN_SECRET"
-          export TF_VAR_ssh_public_key="$ANS_SSH_PUBLIC_KEY"
+          echo "Destroying infrastructure for app: ${{ inputs.app_name }}"
+          echo "Environment: ${{ inputs.environment }}"
+          echo "VLAN: ${{ inputs.vlan_tag }}"
           
-          # Terraform Destroy Plan
-          terraform plan -destroy \
-            -var="app_name=${{ inputs.app_name }}" \
-            -var="vlan_tag=${{ inputs.vlan_tag }}" \
-            -var="vm_target_ip=${{ inputs.vm_target_ip }}" \
-            -var="vm_cpu_cores=${{ inputs.cpu_cores }}" \
-            -var="vm_ram_mb=${{ inputs.ram_mb }}" \
-            -var="vm_disk_gb=${{ inputs.disk_gb }}" \
-            -out=destroy_plan
+          # Build destroy arguments based on deployment mode
+          DESTROY_ARGS=(
+            -auto-approve
+            -var="app_name=${{ inputs.app_name }}"
+            -var="environment=${{ inputs.environment }}"
+            -var="vlan_tag=${{ inputs.vlan_tag }}"
+            -var="vm_cpu_cores=${{ inputs.cpu_cores }}"
+            -var="vm_ram_mb=${{ inputs.ram_mb }}"
+            -var="vm_disk_gb=${{ inputs.disk_gb }}"
+            -var="resource_type=${{ inputs.resource_type }}"
+            -var="enable_tailscale_terraform=false"
+          )
+          
+          # Add instances or vm_target_ip based on mode
+          if [ -n "${{ inputs.instances }}" ]; then
+            echo "Multi-instance mode"
+            echo '${{ inputs.instances }}' > /tmp/instances.json
+            DESTROY_ARGS+=(-var="instances=$(cat /tmp/instances.json)")
+            echo "Instances to destroy:"
+            cat /tmp/instances.json | jq -r 'to_entries[] | "  \(.key): \(.value.ip_address)"'
+          else
+            echo "Single-instance mode"
+            echo "Target IP: ${{ inputs.vm_target_ip }}"
+            DESTROY_ARGS+=(-var="vm_target_ip=${{ inputs.vm_target_ip }}")
+          fi
+          echo ""
           
           # Terraform Destroy
-          terraform apply destroy_plan
+          terraform destroy "${DESTROY_ARGS[@]}"
+          echo "✓ Infrastructure destroyed successfully"
+          if [ -n "${{ inputs.instances }}" ]; then
+            echo "✓ All instances removed from Proxmox"
+          else
+            echo "✓ VM/LXC removed from Proxmox"
+          fi
+          echo "✓ Tailscale devices cleaned up (if Terraform-managed)"
+          echo "✓ Terraform state cleaned up"
           
-          echo "✓ VM '${{ inputs.app_name }}' has been destroyed."
+          # Note about manual cleanup
+          echo ""
+          echo "📋 Manual cleanup (if needed):"
+          echo "  1. Remove Octopus Deploy targets manually if they were registered"
+          echo "  2. Check Tailscale admin console for any orphaned devices"
+          echo "  3. Verify Proxmox has no leftover resources"
           EOF
