--- a/ansible/site.yml
+++ b/ansible/site.yml
@@ -70,6 +70,24 @@
         - freeipa_admin_password is defined
     
     # Apply all roles from ansible_roles list
+    # Special handling for etcd role which needs cluster topology
+    - name: Build etcd cluster configuration
+      set_fact:
+        etcd_node_name: "{{ target_hostname }}"
+        etcd_initial_cluster: "{% for host in ansible_play_hosts %}{{ hostvars[host]['target_hostname'] }}=http://{{ host }}:2380{% if not loop.last %},{% endif %}{% endfor %}"
+      when:
+        - ansible_roles is defined
+        - "'etcd' in ansible_roles"
+    
+    - name: Debug etcd configuration
+      debug:
+        msg:
+          - "Node name: {{ etcd_node_name | default('NOT SET') }}"
+          - "Initial cluster: {{ etcd_initial_cluster | default('NOT SET') }}"
+      when:
+        - ansible_roles is defined
+        - "'etcd' in ansible_roles"
+    
     - name: Apply custom roles
       include_role:
         name: "{{ item }}"
