add user password

--- a/ansible/roles/patroni/tasks/main.yml
+++ b/ansible/roles/patroni/tasks/main.yml
@@ -48,6 +48,7 @@
       - psycopg2-binary
     state: present
     executable: pip3
+    extra_args: --break-system-packages
 
 - name: Create Patroni configuration directory
   ansible.builtin.file:
