--- a/ansible/roles/patroni/tasks/main.yml
+++ b/ansible/roles/patroni/tasks/main.yml
@@ -84,25 +84,54 @@
     - reload systemd
     - restart patroni
 
-- name: Check etcd cluster health before starting Patroni
-  ansible.builtin.command: curl -s http://{{ item }}:2379/health
+- name: Wait for etcd cluster to be accessible
+  ansible.builtin.uri:
+    url: "http://{{ etcd_endpoint }}:2379/health"
+    status_code: 200
   loop: "{{ etcd_cluster_endpoints.split(',') }}"
+  loop_control:
+    loop_var: etcd_endpoint
   register: etcd_health
+  until: etcd_health.status == 200
+  retries: 15
+  delay: 4
   failed_when: false
   changed_when: false
 
 - name: Display etcd health check results
   debug:
-    msg: "etcd endpoint {{ item.item }} health: {{ item.stdout | default('FAILED') }}"
+    msg: "etcd endpoint {{ item.etcd_endpoint }} health: {{ 'OK' if item.status == 200 else 'FAILED' }}"
   loop: "{{ etcd_health.results }}"
   loop_control:
-    label: "{{ item.item }}"
+    label: "{{ item.etcd_endpoint }}"
+
+- name: Count healthy etcd nodes
+  set_fact:
+    healthy_etcd_count: "{{ etcd_health.results | selectattr('status', 'equalto', 200) | list | length }}"
+
+- name: Display etcd cluster status
+  debug:
+    msg:
+      - "Healthy etcd nodes: {{ healthy_etcd_count }}/{{ etcd_health.results | length }}"
+      - "Patroni requires at least 1 healthy etcd node to start"
+
+- name: Show etcd service status if no nodes are healthy
+  ansible.builtin.command: systemctl status etcd --no-pager
+  register: etcd_service_status
+  when: healthy_etcd_count | int == 0
+  changed_when: false
+  failed_when: false
+
+- name: Display etcd service status
+  debug:
+    msg: "{{ etcd_service_status.stdout_lines }}"
+  when: healthy_etcd_count | int == 0
 
 - name: Verify at least one etcd node is healthy
   assert:
-    that: etcd_health.results | selectattr('rc', 'equalto', 0) | list | length > 0
-    fail_msg: "No etcd nodes are accessible. Patroni requires etcd to be running."
-    success_msg: "At least one etcd node is accessible"
+    that: healthy_etcd_count | int > 0
+    fail_msg: "No etcd nodes are accessible. Patroni requires etcd to be running. Check etcd service status above."
+    success_msg: "{{ healthy_etcd_count }} etcd node(s) accessible - proceeding with Patroni startup"
 
 - name: Reload systemd daemon
   ansible.builtin.systemd:
