--- a/ansible/roles/patroni/tasks/main.yml
+++ b/ansible/roles/patroni/tasks/main.yml
@@ -85,7 +85,7 @@
     - restart patroni
 
 - name: Check etcd cluster health
-  ansible.builtin.command: curl -sf http://{{ etcd_endpoint }}:2379/health
+  ansible.builtin.command: curl -sL http://{{ etcd_endpoint }}:2379/health
   loop: "{{ etcd_cluster_endpoints.split(',') }}"
   loop_control:
     loop_var: etcd_endpoint
@@ -95,14 +95,15 @@
 
 - name: Display etcd health check results
   debug:
-    msg: "etcd endpoint {{ item.etcd_endpoint }} health: {{ 'OK (rc=' + (item.rc | string) + ')' if item.rc == 0 else 'FAILED (rc=' + (item.rc | string) + ')' }} - Response: {{ item.stdout | default('no response') }}"
+    msg: "etcd endpoint {{ health_result.etcd_endpoint }} health: {{ 'OK' if (health_result.rc == 0 and '\"health\":\"true\"' in health_result.stdout) else 'FAILED' }} - Response: {{ health_result.stdout | default('no response') }}"
   loop: "{{ etcd_health.results }}"
   loop_control:
-    label: "{{ item.etcd_endpoint }}"
+    loop_var: health_result
+    label: "{{ health_result.etcd_endpoint }}"
 
 - name: Count healthy etcd nodes
   set_fact:
-    healthy_etcd_count: "{{ etcd_health.results | selectattr('rc', 'equalto', 0) | list | length }}"
+    healthy_etcd_count: "{{ etcd_health.results | selectattr('rc', 'equalto', 0) | selectattr('stdout', 'search', '\"health\":\"true\"') | list | length }}"
 
 - name: Display etcd cluster status
   debug:
